--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
     <string name="bottom_navigation_home">Home</string>
     <string name="bottom_navigation_behandelingen">Behandelingen</string>
     <string name="bottom_navigation_afspraak">Afspraak</string>
+    <string name="bottom_navigation_artsen">Artsen</string>
     <string name="news_blog_title_1">Blogpost voorbeeld 1</string>
     <string name="news_blog_title_2">Blogpost voorbeeld 2</string>
     <string name="news_blog_description_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
     <string name="news_blog_description_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
