--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="name_label">Name</string>
     <string name="email_label">Email</string>
     <string name="user_icon_url">https://images.ctfassets.net/23aumh6u8s0i/5hHkO5DxWMPxDjc2QZLXYf/403128092dedc8eb3395314b1d3545ad/icon-user.png</string>
-
+    <string name="com_auth0_scheme">app</string>
+    <string name="com_auth0_domain">vision-oogcentrum.eu.auth0.com</string>
+    <string name="com_auth0_client_id">E4Lw029mRzi7rfU8w3hRRNY9CpfPZL8r</string>
 </resources>
