--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,16 @@
 <resources>
+
+
+
     <string name="app_name">Vision Oogcenter</string>
+    <string name="detail">CalendarMonth</string>
+    <string name="about_title">About</string>
+    <string name="expand_button_content_description">Expand task item</string>
+    <string name="navigation_rail">Navigate between items here</string>
+
+
+
+
     <string name="bottom_navigation_home">Home</string>
     <string name="bottom_navigation_behandelingen">Behandelingen</string>
     <string name="bottom_navigation_afspraak">Afspraak</string>
